--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,11 @@ input:focus{
     border: 2px solid #ffffff;
   outline:none;
 }
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px #0078a0!important;
+    -webkit-text-fill-color: white!important;
+    color: white!important;
+}
 input::placeholder{
 
   color: #ffffff;
@@ -114,7 +119,7 @@ input::placeholder{
 
 }
 .submitBtn{
-
+    outline: 0;
     display: block;
     margin: 19px auto 0;
     border: none;
@@ -128,6 +133,7 @@ font-weight: 700;
 text-transform: uppercase;
 }
 .submitBtn:hover{
+
   color: #ffffff;
   border: 1px solid #ffffff;
   background-color: #0078a0;
